--- a/404.html
+++ b/404.html
@@ -5,8 +5,15 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="header">
+            <a href="index.html" class="header-link">Home</a>
+            <a href="about.html" class="header-link">About</a>
+            <a href="index.html" class="header-link">Projects</a>
+            <a href="index.html" class="header-link">Thoughts</a>
+            <a href="resume.pdf" class="header-link">Resume</a>
+        </div>
         <div class="main-container">
-            <p class="small-text">Gone...</p>
+            <p class="medium-text">Something's missing!</p>
         </div>
     </body>
 </html>
