--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="header">
+            <a href="index.html" class="header-link">Home</a>
+            <a href="about.html" class="header-link">About</a>
+            <a href="index.html" class="header-link">Projects</a>
+            <a href="index.html" class="header-link">Thoughts</a>
+            <a href="resume.pdf" class="header-link">Resume</a>
+        </div>
         <div class="main-container">
             <p class="big-text">Matthew Lee</p>
-            <p class="medium-text wiggle">@ Stanford, CA</p>
-            <p class="small-text special-text">+ the world!</p>
+            <p class="medium-text wiggle special-text">@ Stanford, CA</p>
+            <p class="small-text">+ the world!</p>
         </div>
     </body>
 </html>
