--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <head>
         <title>Matthew Lee</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="prefetch" href="./bg.png" />
     </head>
     <body>
         <div class="header">
